feat/2029: update /hosts/missing-dbs api
